# api-gateway

./: .dockerignore  .gitignore  .gitmodules  Dockerfile.dev  Dockerfile.server  alembic.ini  docker-compose.api.yml  pyproject.toml  requirements.dev.txt  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: build_and_push.yml
alembic/: env.py
alembic/versions/: 1713f8a5a28b_change_type_order_subunit.py  325807dcf81e_subunit_blocks.py  325f9378ff71_change_name_attribute_exercise.py  32facb72ffe1_views_question_value.py  4f4f771b6d6e_unique_constraint.py  4fa82ecfcfb4_initial_schema.py
app/: main.py
app/api/dependencies/: auth.py  database.py
app/api/routes/: api.py  auth.py  course.py  erlang.py  exercise.py  forum.py  quiz.py  unit.py  user.py
app/core/: events.py  logging.py
app/core/settings/: app.py  base.py  development.py  production.py  test.py
app/db/: entries.py  events.py
app/db/crud/: course.py  exercise.py  publication.py  quiz.py  quiz_answers.py  quiz_pass.py  submission.py  subunit.py  unit.py  user.py  vote.py
app/models/: __init__.py  common.py
app/models/domain/: __init__.py  course.py  delivery.py  exercise.py  publication.py  quiz.py  quiz_answers.py  quiz_pass.py  submission.py  subunit.py  unit.py  user.py  vote.py
app/models/schemas/: __init__.py  course.py  delivery.py  erlang.py  exercise.py  jwt.py  progress.py  publication.py  quiz.py  quiz_answers.py  quiz_pass.py  rwmodel.py  submission.py  subunit.py  unit.py  user.py  vote.py
app/services/: delivery.py  erlang.py  exercise.py  forum.py  progress.py  publication.py  quiz_answers.py  subunit.py  unit.py  user.py  vote.py
app/services/dependencies/: jwt.py
tests/: conftest.py
tests/test_api/test_integration/: test_erlang.py
tests/test_api/test_routes/: test_auth.py  test_course.py  test_erlang.py  test_exercise.py  test_forum.py  test_quiz.py  test_server.py  test_unit.py  test_user.py
