[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Erlang_Tutorial_Api"
version = "0.1.0"
description = "Fast Api application for the Erlang Tutorial Web Page"
authors = [
  { name = "Mickael Castaneda", email = "themasor07@gmail.com" }
]
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "asyncpg==0.30.0",
    "click==8.2.1",
    "fastapi==0.116.1",
    "greenlet==3.2.3",
    "h11==0.16.0",
    "idna==3.10",
    "loguru==0.7.3",
    "pydantic==2.11.7",
    "pydantic-settings==2.10.1",
    "pydantic_core==2.33.2",
    "python-dotenv==1.1.1",
    "sniffio==1.3.1",
    "SQLAlchemy==2.0.41",
    "starlette==0.47.1",
    "typing-inspection==0.4.1",
    "typing_extensions==4.14.1",
    "uvicorn==0.35.0",
    "bcrypt==4.3.0",
    "cffi==1.17.1",
    "cryptography==45.0.5",
    "PyJWT==2.10.1",
    "pycparser==2.22"
]

[project.optional-dependencies]
dev = [
    "certifi==2025.7.14",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "iniconfig==2.1.0",
    "packaging==25.0",
    "pluggy==1.6.0",
    "Pygments==2.19.2",
    "pytest==8.4.1",
    "asgi-lifespan==2.1.0",
    "pytest-asyncio==1.1.0",
    "tornado==6.5.1",
    "pytest-tornasync==0.6.0.post2",
    "trio==0.30.0",
    "pytest-trio==0.8.0",
    "sortedcontainers==2.4.0",
    "attrs==25.3.0",
    "outcome==1.3.0.post0",
    "decorator==5.2.1",
    "pytest-twisted==1.14.3",
    "Automat==25.4.16",
    "constantly==23.10.4",
    "hyperlink==21.0.0",
    "incremental==24.7.2",
    "setuptools==80.9.0",
    "Twisted==25.5.0",
    "zope.interface==7.2",
    "alembic==1.16.4",
    "Mako==1.3.10",
    "MarkupSafe==3.0.2",
    "pytest-timeout==2.4.0",
    "coverage==7.10.6",
    "pytest-cov==6.2.1",
    "pytest-mock==3.14.1",
    "gevent==25.8.2",
    "zope.event==5.1.1"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["alembic*"]

[tool.coverage.run]
concurrency = ["gevent"]

[tool.pytest.ini_options]
env = [
  "APP_ENV=test",
]